# save-the-hibiscus

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
cloud_copilot/: agent.py  requirements.txt
copilot/: __init__.py  agent.py  capture.py  capture_daemon.py  gcs.py  project.py  runtime.py  training.py
detector/: __init__.py  classify.py  embed.py  job.py  train.py
gcp/: authz-policy.yaml  hibiscus-gateway-egress.yaml  iap-authz-extension.yaml  teardown.sh
hibiscus_guard/: __init__.py  actuator.py  agent.py  alert_mcp_server.py  ambient.py  simulate.py  store.py
hibiscus_guard/egress/: __init__.py  channels.py  governance.py
hibiscus_guard/perception/: __init__.py  base.py  cameras.py  detector_source.py  events.py  stub.py
tools/: fetch_dataset.py
