[project]
name = "save-the-hibiscus"
version = "0.1.0"
description = "Squirrel-detection ADK agent for learning agent governance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=2.3.0",
    "litellm>=1.83.7,<=1.90.1",
    "mcp>=1.28.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
# ADK discovers the agent by importing the submodule for its side effect.
"**/__init__.py" = ["F401"]
