[project]
name = "save-the-hibiscus"
version = "0.1.0"
description = "Squirrel-detection ADK agent for learning agent governance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=2.3.0",
    "google-cloud-aiplatform>=1.159.0",
    "litellm>=1.83.7,<=1.83.14",
    "mcp>=1.28.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
# ADK discovers the agent by importing the submodule for its side effect.
"**/__init__.py" = ["F401"]

[dependency-groups]
detector = [
    "numpy>=2.5.0",
    "pillow>=12.2.0",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers>=5.12.1",
]
